[package]
name = "hashmap_union"
version = "0.3.1"
authors = ["Robert Greener"]
description = "Allows the union and intersection of hashmaps"
repository = "https://github.com/0xr0bert/hashmap_union"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
keywords = ["hashmap", "union", "intersection"]
categories = ["data-structures"]
exclude = [".build.yml"]

[dependencies]
